Fixed alignment for table headers in general

--- a/components/base/_tables.scss
+++ b/components/base/_tables.scss
@@ -52,6 +52,9 @@ table {
     border-bottom: 1px solid $table-header-border-color;
     background-color: $table-header-background-color;
     color: $table-header-color;
+    th {
+      text-align: left;
+    }
     tr:not(:last-child) th {
       border-bottom: 1px solid $table-header-row-border-bottom-color;
     }
@@ -66,7 +69,6 @@ table {
       th {
         padding: rem(8px 25px 8px 11px);
         white-space: nowrap;
-        text-align: left;
         position: relative;
         label {
           font-size: rem(13px);
